# alpha2048

./: .gitignore  CLAUDE.md  README.md  analyze  design.md  go.mod
cmd/analyze/: main.go
cmd/autoplay/: main.go
cmd/play/: main.go
go/: CLAUDE.md  README.md  analyze  autoplay  design.md  go.mod  play
go/cmd/analyze/: main.go
go/cmd/autoplay/: main.go
go/cmd/play/: main.go
go/internal/domain/: bitboard_test.go  evaluator_test.go  game.go  game_test.go  solver_bitboard.go
go/internal/usecase/: autoplay.go  usecase.go
internal/domain/: bitboard.go  board.go  board_test.go  evaluator.go  solver.go  solver_parallel.go
internal/usecase/: autoplay.go  usecase.go
python/: .gitignore  README.md  __init__.py  design.md  monitor.sh  pyproject.toml  requirements.txt  setup.py  test_best.sh  train_long.sh
python/cli/: autoplay.py  play.py
python/notebooks/: colab_training.ipynb
python/pkg/envs/: __init__.py  env.py
python/pkg/fields/: __init__.py  actions.py  board.py  game.py
python/pkg/networks/: __init__.py  cnn.py  mlp.py  ntuple.py
python/pkg/policies/: __init__.py  base.py  epsilon_greedy.py  greedy.py
python/pkg/utils/: __init__.py  replay_memory.py  state.py  transition.py
python/tests/: test_env.py  test_rl.py
python/training/: __init__.py
python/training/reinforcement_learning/: __init__.py  test.py  test_enhanced.py  train.py  train_enhanced.py
