[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha2048"
version = "0.1.0"
description = "2048 game environment for reinforcement learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "gymnasium>=0.29.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
play = "cli.play:main"
autoplay = "cli.autoplay:main"
train = "training.reinforcement_learning.train:main"
test-model = "training.reinforcement_learning.test:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pkg*", "cli*", "training*"]
